--- a/test/style/main.less
+++ b/test/style/main.less
@@ -16,6 +16,15 @@ html,body{
         flex: 1;
         border-top: 1px solid #ababab;
         border-bottom: 1px solid #ababab;
+        display: flex;
+        pre{
+            flex: 1;
+            margin: 0px;
+            display: flex;
+            code{
+                flex: 1;
+            }
+        }
     }
     #right{
         border-left: 1px solid #ababab;
